public/styles.css
/* Dark Mode */
#root, html, .table {
    background-color: #222222; 
    color: #EEEEEE;
}

.App {
    white-space: pre-line;
    text-align: center;
    font-size: 18px;
}

img {
    object-fit: "contain";
}

#imageSection {
    height: 600px;
}

#messageBox {
    color: #EEEEEE;
    background-color: #333333;
}

#messageBox > ul {
    list-style-type: none;
    text-align: left;
    padding: 0;
}

#textSection {
    font-size: 18px;
    margin-bottom: 1em;
}

#messageSection, #profileSection {
    max-height: 590px;
    background-color: #333333;
    padding: 1em;
    border-radius: 1em;
}

#profileSectionHeader {
    display: flex;
    flex-direction: column;
}

#profileSection {
    list-style-type: none;
}

#toggleGnome {
    height: 40px;
    width: 40px;
}

#hidingGnome {
    background: none;
    border: none;
    padding: 0;
    font: inherit;
    color: inherit;
    text-decoration: none;
}

.gnome{
    filter: grayscale(100%);
}

.toggled {
    filter: none !important;
}

li {
    white-space: pre-wrap;
}

.mod1 {
    background-color: #444444;
}

.App {
    margin-top: 20px;
    width: 80%;
}

.message {
    width: 100%;
}

.scoreDiffPos {
 color: green;
 vertical-align: super;
}

.scoreDiffNeg {
    color: red;
    vertical-align: super;
   }

.bonus {
    color: green;
    font-size: 0.8em;
}

.PFP {
    position: relative;
    height: 25x;
    width: 25px;
    margin-right: 10px;
    top: -1px;
}

.profileImage {
    max-width: 100%;
    max-height: 300px;
    object-fit: "contain";
    margin-bottom: 10px;
}

.profileName {
    font-size: 24px;
    font-weight: bold;
    margin-bottom: 10px;
}

.guessButton {
    margin: 8px;
}

.jumpscare {
    visibility: hidden;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(255,255,255,0.7);
    z-index: 9999;
    padding-top: 100px;
  }
  
  .jumpscare.show {
    visibility: visible;
    -webkit-animation: fadeOut 1s ease-in-out 0.5s forwards;
    animation: fadeOut 1s ease-in-out 0.5s forwards;
  }
  
  @-webkit-keyframes fadeOut {
      from {opacity: 1;}
      to {opacity: 0;}
  }
  
  @keyframes fadeOut {
      from {opacity: 1;}
      to {opacity:0 ;}
  }

/* less than extra large */
@media (max-width: 1200px) {  
    .message {
        width: 100%;
    }
    .App {
        font-size: 16px;
    }
    #imageSection {
        height: 100%;
    }
}

/* less than large */
@media (max-width: 992px) {  
    .App {
        width: 100%;
        font-size: 14px;
    }
}

/* less than medium */
@media (max-width: 768px) {  
    .App {
        width: 100%;
        max-width: 100%;
    }
}

/* Mobile and smaller */
@media (max-width: 576px) {  
    #profileSectionHeader {
        display: flex;
        flex-direction: row-reverse;
        align-items: center;
        justify-content: space-around;

    }
    .profileImage {
        width: 30%;
    }

    .col {
        padding: 0px;
    }
}

